--- a/crude_app/views/include/_header.ejs
+++ b/crude_app/views/include/_header.ejs
@@ -13,55 +13,44 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!--  <header> -->
-    <header id="header">
+
+     <!-- Header -->
+     <header id="header">
       <nav>
-        <div class="container">
-         <div class="text-center">
-            <a href="/" class="nav-brand text-dark">Employess list</a>
-
-         </div>
-          
-
-
-
-
-
-
-
-
-
-
-        </nav>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        </div>
-
-
-
-
-
-
-
-
+          <div class="container">
+              <div class="text-center">
+                  <a href="/" class="nav-brand text-dark">Employess List</a>
+              </div>
+          </div>
       </nav>
 
 
+      <!doctype html>
+      <html lang="en">
+      
+      <head>
+          <!-- Required meta tags -->
+          <meta charset="utf-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+      
+          <!-- Bootstrap CSS -->
+          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+      
+          <title>Unaducated website</title>
+          <link rel="stylesheet" href="../assets/css/form2.css">
+          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      
+      
+      </head>
+      <body>
+
+
+
+     
+      
+        
 
 
 
@@ -70,11 +59,12 @@
 
 
 
-    </header>
 
 
 
-<!-- </header> -->
-    
-</body>
-</html>
+
+
+
+
+  </header>
+<!-- /Header -->
