--- a/crude_app/views/include/_show.ejs
+++ b/crude_app/views/include/_show.ejs
@@ -5,7 +5,7 @@
     <td>Plumber</td>
     <td>Active</td>
     <td>
-        <a href="#" class="btn border-shadow update">
+        <a href="/update-employee" class="btn border-shadow update">
             <span class="text-gradient"><i class="fas fa-pencil-alt"></i></class> </span>
         </a>
         <a href="#" class="btn border-shadow delete">
