--- a/crude_app/views/index.ejs
+++ b/crude_app/views/index.ejs
@@ -1,23 +1,23 @@
 <!-- include header -->
-<!-- <%-include("include/_header")%> -->
-<%- include ("include/_header") %>
-    <!-- /include header -->
+<%- include('include/_header') %>
+<!-- /include header -->
 
 
-
-    <!-- Main -->
+    <!-- Main Site -->
     <main id="site-main">
         <div class="container">
-            <div class="box-nav d-flex-justify-between">
-                <a href="/add-employee" class="border-shadow"></a>
-                <span class="text-gradient">New Employee<i class="fas fa-users"></i></span>
-
+            <div class="box-nav d-flex justify-between">
+                <a href="/add-employee" class="border-shadow">
+                    <span class="text-gradient">New Employee<i class="fas fa-user"></i></span>
+                </a>
             </div>
+
             <!-- form handling -->
             <form action="/" method="POST">
                 <table class="table">
                     <thead class="thead-dark">
                         <tr>
+                           
                             <th>ID</th>
                             <th>Username</th>
                             <th>Gender</th>
@@ -27,46 +27,16 @@
 
                         </tr>
                     </thead>
-
-
                     <tbody>
-
-                        <%- include("include/_show")%>    
-
-                        <!-- <%-include("include /_footer.ejs")%> -->
-                        <!-- <tr>
-                            <td>1</td>
-                            <td>Username</td>
-                            <td>Male</td>
-                            <td>Plumber</td>
-                            <td>Active</td>
-                            <td>
-                                <a href="#" class="btn border-shadow update">
-                                    <span class="text-gradient"><i class="fas fa-pencil-alt"></i></class> </span>
-                                </a>
-                                <a href="#" class="btn border-shadow delete">
-                                    <span class="text-gradient"><i class="fas fa-times"></i></class> </span>
-                                </a>
-                            </td>
-                        </tr> -->
+                        <%- include('include/_show') %>
                     </tbody>
-                    </table>
-              </form>
+                </table>
+            </form>
         </div>
     </main>
+<!-- /Main Site -->
 
 
-
-    <!-- /Main -->
-
-
-
-
-
-
-
-
-    <!-- include footer -->
-    <!-- <%- include ("include/_footer") %> -->
-    <!-- <%- include('include/_footer'); -%> -->
-        <!-- /include footer-->                                     
+<!-- include footer -->
+<%- include('include/_footer') %>
+<!-- /include footer -->
