--- a/crude_app/views/add_employee.ejs
+++ b/crude_app/views/add_employee.ejs
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="box-nav d-flex justify-between">
                 <div class="filter">
-                    <a href="/"><i class="fas fa-angle-double-left"></i>Employees</a>
+                    <a href="/"><i class="fas fa-angle-double-left"></i>Employee List</a>
                 </div>
                 <div id="success" class="alert alert-success alert-dismissible fade " role="alert">
                     <strong>Success</strong>You have been succesfully submitted
