--- a/crude_app/views/include/_form.ejs
+++ b/crude_app/views/include/_form.ejs
@@ -1,4 +1,4 @@
-<form method="POST" id="add_employee">
+<form action="/api/employees" method="POST" id="add_employee">
     <div class="form-group">
         <label for="name">Username</label>
         <input type="text" class="form-control" id="username" placeholder="Enter your username">
