--- a/crude_app/views/index.ejs
+++ b/crude_app/views/index.ejs
@@ -32,6 +32,7 @@
                     </tbody>
                 </table>
             </form>
+            <!-- <%= employees %> -->
         </div>
     </main>
 <!-- /Main Site -->
