--- a/crude_app/views/index.ejs
+++ b/crude_app/views/index.ejs
@@ -13,7 +13,7 @@
             </div>
 
             <!-- form handling -->
-            <form action="/" method="POST">
+            <form action="/api/employees" method="POST">
                 <table class="table">
                     <thead class="thead-dark">
                         <tr>
