--- a/crude_app/views/add_employee.ejs
+++ b/crude_app/views/add_employee.ejs
@@ -8,8 +8,8 @@
                 <div class="filter">
                     <a href="/"><i class="fas fa-angle-double-left"></i>Employee List</a>
                 </div>
-                <div id="success" class="alert alert-success alert-dismissible fade " role="alert">
-                    <strong>Success</strong>You have been succesfully submitted
+                  <!-- <div id="success" class="alert alert-success alert-dismissible fade " role="alert">
+                  <strong>Success</strong>You have been succesfully submitted
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -19,7 +19,7 @@
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                </div>
+                </div> -->
 
 
 
