--- a/Home page/home.css
+++ b/Home page/home.css
@@ -2,7 +2,7 @@
 *{
   margin:0;
   padding:0;
-  box-sizing: border-box;
+  
 }
 
 /*CSS Variables*/
@@ -20,22 +20,20 @@
 
 /*Navigation bar: logo and image*/ 
 #logo{
-    margin: 10px ;
-
-}
-#logo img{
+  margin: 10px ;}
+ #logo img{ 
     height: 46px;
     margin: 3px 6px ;
     position:relative;
     z-index:49;
-    border: 2px solid greenyellow;
-    border-radius: 30px;
+
     
 }
 
 /* Navigation bar: list styling*/
  #navbar{
   position:Relative;
+  background-color:rgb(63, 59, 55);
   font-family: fantasy;
   font-family: 'Averia Libre', cursive;
 
@@ -48,11 +46,11 @@
 
  #navbar ul{
    display: flex;
-   padding-left: 1360px;
+   padding-left:750px ;
 }
  #navbar::before{
    content:"" ;
-   background-color: rgb(255, 255, 255);
+   background-color: black;
    position: absolute ;
    height:100%;
    width: 100%;
@@ -60,6 +58,9 @@
    opacity: 0.4;
 
 
+}
+#cat{
+  text-align: center;
 }
  #navbar ul li{
  list-style: none;
@@ -70,13 +71,12 @@
    display: block ;
    padding:3px 20px ;
    border-radius: 20px;
-   color:#294fca ;
-   text-decoration:none ;
    
-}
+   text-decoration:none ;
+}*/
 #navbar ul li a:hover{
-    color: rgb(95, 219, 95);
-   background-color:rgb(47, 21, 165) ;
+    color:black;
+   background-color:white ;
 }
 
 
@@ -90,29 +90,26 @@
  align-items: center;
 }
 #home::before{
-        content:"" ;
-        background:url('../photos/lowerbg.jpg') no-repeat center center/cover;
-        background-blend-mode: darken;
+        
+        background-image:"https://davieconstruction.com/wp-content/uploads/2019/07/Careers-Page-Header.jpg" no-repeat center center/color;
         position: absolute ;
-        height:100vh;
+        height:100%;
         width: 100%;
         z-index: -1;
         opacity: 0.4;
-        
+     
      }
 #home h1{
     text-align:center ;
-    font-family: 'Dancing Script', cursive;
-    font-weight: bold;
-    font-size: 93px;
-    color: rgb(207, 145, 52);
+    font-family: 'Averia Libre', cursive;
+    
 
 }
 #home p{
-    color: black;
+    color: rgb(8, 8, 1);
     text-align: center;
     font-size: 1.5rem;
-    font-family: 'Bebas Neue';
+    font-family: 'Averia Libre', cursive;
 }
 
 
@@ -124,119 +121,31 @@
   padding: 12px;
 }
 .btn{
-  padding: 2px 14px;
-  border: 2px solid rgb(7, 51, 7);
-  background-color: rgb(243, 221, 188);
-  color: black;
-  width: 168px;
-  height: 40px;
-  font-family: 'Averia Libre', cursive;
-  font-size: 1.5rem;
-  margin: 25px;
-  cursor: pointer;
+    padding: 6px 20px;
+    border: 2px solid black;
+    background-color:blanchedalmond;
+    color: black ;
+    width: 200px ;
+    height: 40px;
+    font-family:'Averia Libre', cursive ;
+    font-size: 1.5rem ;
+    margin: 15px;
+    cursor: pointer;
 }
-.back{
-  background-color: rgb(228, 252, 232);
-}
-
-.carouselcontainer{
-  overflow:hidden;
-  width:60%;
-  margin: auto;
-  position:relative;
-  z-index: 30;
-}
-
-.carousel-slide{
-  display:flex;
-}
-#lastclone{
-  
-  width: 1144px;
-  height:650px;
-  justify-content: center;
-}
-#img2{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#img3{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#img4{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#img5{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#img6{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#img7{
-  
-  width: 1144px;
-  height:650px;
-  border: 2px solid red;
-  justify-content: center;
-}
-#firstclone{
-  
-  width:1100px;
-  height:650px;
-}
-.text{
-  
-  text-align: center;
-  position:relative;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
- 
-}
-#cat{
-  width:60%;
-  margin:auto;
-  border:2px solid rgb(159, 42, 212);
-  font-size: 60px;
-  text-align: center;
-  font-family: 'Abril Fatface';
-  background-color: rgb(228, 252, 232);
-}
-.carouselcontainer a h1{
-  text-decoration: none;
-  color: rgb(171, 105, 233);
-  font-family: 'Architects Daughter';
+.job{
+ font-size: 50px;
 }
 /*Testinomials*/
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
-*{
+.foot{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Josefin Sans', sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-body{
-  background: #eeeeee;
-}
 
 .clear-fix{
   clear: both;
@@ -298,14 +207,256 @@ body{
   width: 25px;
 }
 
+/*Contact*/
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+body{
+  background: #F0F0F0;
+  font-family: Open Sans ,sans-serif;
+  line-height:1.5em;
+}
+#contact {
+width: 500px;
+margin:2em auto;
+background:white;
+position: relative;
+}
+#contact::after {
+content: "";
+display: block;
+height: 30px;
+width: 90%;
+left: 5%;
+bottom: 0;
+position: absolute;
+-webkit-box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.19);
+box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.19);
+border-radius: 100%;
+z-index: -1;
+}
+#contact article {
+  padding: 1em;
+}
+#contact h1 {
+background: #F2385A;
+font-family: Oswald ,sans-serif;
+font-size: 1.75em;
+padding: 0.6em 0 0.6em 0.4em;
+color: white;
+text-shadow: 0 0.06em 0 #424242;
+position: relative;
+}
+.contactbutton {
+background: #F2385A;
+-webkit-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+text-align: center;
+display: block;
+width: 100%;
+height: 50px;
+margin-top: 20px;
+margin-bottom: 2px;
+cursor: pointer;
+}
+.contactbutton:hover {
+-webkit-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+margin-top: 22px;
+margin-left: 2px;
+margin-bottom: 0px;
+}
+.mail {
+margin-top: 11px;
+font-size: 15px;
+display: inline-block;
+border-top: 2em solid transparent;
+border-left: 2.6em solid #832032;
+height: 0;
+width: 0;
+position: relative;
+}
+.mail:before {
+content: '';
+top: -2.5em;
+left: -2.95em;
+display: block;
+position: absolute;
+border-top: 1.2em solid #832032;
+border-left: 1.6em solid transparent;
+border-right: 1.6em solid transparent;
+border-bottom: 1em solid transparent;
+font-size: 0.8em;
+}
+.mail::after {
+display: block;
+content: "";
+position: absolute;
+border-top: 2em solid transparent;
+border-right: 2.6em solid #832032;
+height: 0;
+width: 0;
+left: -2.18em;
+bottom: 0;
+}
+#checkcontact{
+position: absolute;
+left: -9999px;
+}
+.contactform {
+overflow: hidden;
+max-height: 0px;
+-webkit-transition: all linear 1s;
+-moz-transition: all linear 1s;
+-o-transition: all linear 1s;
+-ms-transition: all linear 1s;
+transition: all linear 1s;
+}
+#checkcontact:checked + .contactform {
+max-height: 1000px;
+}
+.input_wrapper {
+position: relative;
+}
+.textarea_wrapper textarea {
+margin-top: 20px;
+display: block;
+width: 100%;
+background: white;
+border: 1px solid #DADADA;
+box-shadow: 0 0 1px 0 #E4E4E4;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+padding: 1em;
+-webkit-transition: all 250ms ease;
+-moz-transition: all 250ms ease;
+-ms-transition: all 250ms ease;
+-o-transition: all 250ms ease;
+transition: all 250ms ease;
+color: #5E5E5E;
+}
+.input_wrapper input[type="text"] {
+margin-top: 1em;
+display: block;
+width: 100%;
+background: white;
+border: 1px solid #DADADA;
+box-shadow: 0 0 1px 0 #E4E4E4;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+padding: 1em;
+-webkit-transition: all 250ms ease;
+-moz-transition: all 250ms ease;
+-ms-transition: all 250ms ease;
+-o-transition: all 250ms ease;
+transition: all 250ms ease;
+color: #5E5E5E;
+text-indent: 15%;
+}
+.input_wrapper input[type="text"]:focus {
+background: rgba(242, 56, 90, 0.05);
+box-shadow: inset 2px 2px 5px 0 #DADADA;
+outline: none;
+text-indent: 0;
+}
+.input_wrapper label {
+position: absolute;
+left: 0;
+top: 0;
+height: 100%;
+background: #F2385A;
+color: white;
+font-family: Oswald ,sans-serif;
+box-sizing: border-box;
+width: 15%;
+text-align: center;
+line-height: 2.8em;
+-webkit-transition: all 250ms ease;
+-moz-transition: all 250ms ease;
+-ms-transition: all 250ms ease;
+-o-transition: all 250ms ease;
+transition: all 250ms ease;
+}
+.input_wrapper input[type="text"]:focus + label {
+left: 85%;
+}
+.textarea_wrapper textarea {
+margin-top: 20px;
+display: block;
+width: 100%;
+  min-height:150px;
+background: white;
+border: 1px solid #DADADA;
+box-shadow: 0 0 1px 0 #E4E4E4;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+padding: 1em;
+-webkit-transition: all 250ms ease;
+-moz-transition: all 250ms ease;
+-ms-transition: all 250ms ease;
+-o-transition: all 250ms ease;
+transition: all 250ms ease;
+color: #5E5E5E;
+}
+.textarea_wrapper textarea:focus {
+background: rgba(242, 56, 90, 0.05);
+box-shadow: inset 2px 2px 5px 0 #DADADA;
+outline: none;
+}
+.submit_wrapper {
+text-align: center;
+}
+.submit_wrapper input {
+text-align: center;
+display: inline-block;
+width: 40%;
+height: 50px;
+margin-top: 1em;
+margin-bottom: 6px;
+cursor: pointer;
+background: #F2385A;
+color: white;
+font-family: Oswald ,sans-serif;
+font-size: 1em;
+border: none;
+-webkit-box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+box-shadow: 1px 1px 0 0 #832032,2px 2px 0 0 #832032,3px 3px 0 0 #832032;
+-webkit-appearance: none;
+  -webkit-transition: all 250ms ease;
+-moz-transition: all 250ms ease;
+-ms-transition: all 250ms ease;
+-o-transition: all 250ms ease;
+transition: all 250ms ease;
+}
+.submit_wrapper input:hover {
+-webkit-box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+box-shadow: 1px 1px 0 0 #832032,0px 0px 0 0 #832032,0px 0px 0 0 #832032;
+margin-top: 22px;
+margin-left: 2px;
+margin-bottom: 0px;
+}
+
+@media (max-width: 500px){
+#contact {
+width: 100%;
+}
+  .input_wrapper label {
+line-height: 3.5em;
+font-size: 0.8em;
+}
+}
+
+
+
 /*Footer*/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
+.foot{
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
-}
-*{
+  
 	margin:0;
 	padding:0;
 	box-sizing: border-box;
@@ -394,4 +545,4 @@ ul{
 }
 }
 
-
+/*CONTACT*/
