--- a/Home page/aboutus.css
+++ b/Home page/aboutus.css
@@ -1,73 +1,86 @@
 *{
     margin: 0%;
     padding: 0%;
-    background-color: rgb(210, 248, 210)
+    background-color: rgb(192, 238, 212);
 }
-/*Navigation bar*/
-#navbar{
-    display: flex;
-    align-items: center ;
-  
-  }
-  
-  /*Navigation bar: logo and image*/ 
-  #logo{
-      margin: 10px ;
-  
-  }
-  #logo img{
-      height: 46px;
-      margin: 3px 6px ;
-      position:relative;
-      z-index:49;
-  
-      
-  }
-  
-  /* Navigation bar: list styling*/
-   #navbar{
-    display: flex;
-    flex-direction: column;
-    position:Relative;
-    background-color:rgb(63, 59, 55);
-    font-family: fantasy;
-    font-family: 'Averia Libre', cursive;
-  
-   }
-    
-   #navbar ul{
-    display: flex;
-    padding-left:750px ;
-  }
-   
-   #navbar::before{
-    content:"" ;
-    background-color: black;
-    position: absolute ;
-    height:100%;
-    width: 100%;
-    z-index: -1;
-    opacity: 0.4;
-  }
-   #navbar ul li{
-    list-style: none;
-    font-size : 1.3rem; 
-  }
-  #navbar ul li a{
-    color: cornsilk;
-    display: block ;
-    padding:3px 20px ;
-    border-radius: 20px;
-    color:black;
-    text-decoration:none ;
-  }
-  #navbar ul li a:hover{
-    color:black;
-    background-color:white ;
+:root{
+
+    --navbar-height: 59px
 }
 
-.firstSection{
-    margin: 90px
+/*Navigation bar*/
+#navbar{
+  display: flex;
+  align-items: center ;
+}
+
+/*Navigation bar: logo and image*/ 
+#logo{
+    margin: 10px ;
+
+}
+#logo img{
+    height: 46px;
+    margin: 3px 6px ;
+    position:relative;
+    z-index:49;
+    border: 2px solid greenyellow;
+    border-radius: 30px;
+    
+}
+
+/* Navigation bar: list styling*/
+ #navbar{
+  position:Relative;
+  font-family: fantasy;
+  font-family: 'Averia Libre',cursive;
+
+ }
+
+
+
+
+
+
+ #navbar ul{
+   display: flex;
+   padding-left: 1360px;
+}
+ #navbar::before{
+   content:"" ;
+   background-color: rgb(255, 255, 255);
+   position: absolute ;
+   height:100%;
+   width: 100%;
+   z-index: -1;
+   opacity: 0.4;
+
+
+}
+ #navbar ul li{
+ list-style: none;
+ font-size : 1.3rem; 
+}
+#navbar ul li a{
+    color: cornsilk;
+   display: block ;
+   padding:3px 20px ;
+   border-radius: 20px;
+   color:#294fca ;
+   text-decoration:none ;
+   
+}
+#navbar ul li a:hover{
+    color: rgb(95, 219, 95);
+   background-color:rgb(47, 21, 165) ;
+}
+.info{
+    text-align: center;
+    justify-content: center;
+    font-size: 45px;
+    font-style: italic;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif,cursive;
+    color: steelblue;
 }
 
 .box-main{
@@ -77,8 +90,8 @@
     max-width: 50%;
     margin: auto;
     margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 55px;
+    margin-top: 0px;
+    padding: 0px;
     border: 4px solid purple;
     border-radius: 5px;
 }
@@ -96,4 +109,30 @@
     font-weight: bold;
     font-size: 40px;
     font-style: normal;
+}
+
+.profile{
+    border: 2px solid darkmagenta;
+    height: 158px;
+    width: 290px;
+}
+.secondhalf{
+    padding-top: 2px;
+    padding-right: 2px;
+}
+
+
+.email{
+    align-content: center;
+    justify-content: center;
+}
+
+.regno{
+    align-content: center;
+    justify-content: center;
+}
+
+.branch{
+    align-content: center;
+    justify-content: center;
 }
