--- a/Home page/aboutus.css
+++ b/Home page/aboutus.css
@@ -75,12 +75,13 @@
    background-color:rgb(47, 21, 165) ;
 }
 .info{
-    text-align: center;
+    text-align: left;
+    padding: 40px;
     justify-content: center;
-    font-size: 45px;
+    font-size: 25px;
     font-style: italic;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif,cursive;
-    color: steelblue;
+    font-family: 'Times New Roman', 'Arial Narrow', Arial, sans-serif,cursive;
+    color:black;
 }
 
 .box-main{
@@ -135,4 +136,3 @@
 .branch{
     align-content: center;
     justify-content: center;
-}
