--- a/Home page/home.css
+++ b/Home page/home.css
@@ -79,7 +79,10 @@
    background-color:white ;
 }
 
-
+.fix{
+  background-color: black;
+  
+}
 /*home section*/
 #home{
  display:flex ; /*will make the things horizontal*/
@@ -119,6 +122,7 @@
 .h-primary{
   font-size: 3.8rem;
   padding: 12px;
+  height: 1500px;
 }
 .btn{
     padding: 6px 20px;
